2008-06-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-toggle-inline-image): Don't toggle images that are
	outside of the region even if they are identical to the ones in the
	region; don't do recursive call of itself; rearrange the source code.
	(w3m-toggle-inline-images): Check whether images are safe even if it is
	called with w3m-display-inline-images=t and force=t; rearrange the
	source code.
	(w3m-toggle-inline-images-internal): Do.

2008-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-image): Work for an image in which there is
	the region end within its anchor.  Reported by Dan Jacobson
	<jidanni@jidanni.org>.

	* w3m-util.el (w3m-deactivate-region): Use zmacs-deactivate-region for
	XEmacs.

2008-06-22  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-search.el (w3m-search-engine-alist): Improve detection of utf-8
	capability.
	(w3m-search-engine-alist): Abolish `yahoo beta' entry; Improve `blog'
	entry to work like `google' entry.

	* w3m-session.el: Add coding cookie.

2008-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-submit-form-safety-check): New user option.  Suggested by
	Dan Jacobson <jidanni@jidanni.org>.
	(w3m-submit-form): Use it.

2008-06-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-auto-show): Scrool horizontally after executing a search
	command.

2008-06-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-use-header-line-title): Modify the doc-string.

2008-06-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-select-buffer): Don't delete other windows.

	* w3m-filter.el (w3m-filter-wikipedia): New function.
	(w3m-filter-rules): Add w3m-filter-wikipedia.

2008-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Add coding cookie.

2008-06-02  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-detect-meta-charset): Use also ';' as delimiter.

2008-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Treat the null string given